# uniassert

./: .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  conan.cmake  conanfile.py  uniassert.h
include/uniassert/: uniassert.h
test/: TestException.h  assertion_failed_handler.cpp  assertion_failed_handler.h  main.cpp  system_assert_header.h  test_exception.h  undef.h  uni_assert.cpp  uni_assert_disabled_asserts.cpp  uni_assert_enabled_asserts.cpp  uni_assertion_handler.cpp  uni_check_return.cpp  uni_check_throw.cpp  uni_disable_asserts.cpp  uni_disable_asserts_with_uni_enable_dynamic_assert_handler.cpp  uni_disable_asserts_with_uni_enable_static_assert_handler.cpp  uni_disable_asserts_with_uni_force_asserts.cpp  uni_enable_dynamic_assert_handler.cpp  uni_enable_dynamic_assert_handler_with_uni_enable_static_assert_handler.cpp  uni_enable_dynamic_assert_handler_with_uni_system_assert_header.cpp  uni_enable_static_assert_handler.cpp  uni_ensure_return.cpp  uni_ensure_throw.cpp  uni_force_asserts.cpp  uni_function.cpp  uni_function_redefined.cpp  uni_return_if.cpp  uni_system_assert.cpp  uni_system_assert_header.cpp  uni_throw_if.cpp  uni_verify_disabled_asserts.cpp  uni_verify_enabled_asserts.cpp
test_package/: conanfile.py  example.cpp
